update dashboard and add sync definitions delete feature
